# api/gen/go/api/tool.pb.go
@@ -22,6 +22,44 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
+type Empty struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *Empty) Reset() {
+	*x = Empty{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_api_tool_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *Empty) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Empty) ProtoMessage() {}
+
+func (x *Empty) ProtoReflect() protoreflect.Message {
+	mi := &file_api_tool_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Empty.ProtoReflect.Descriptor instead.
+func (*Empty) Descriptor() ([]byte, []int) {
+	return file_api_tool_proto_rawDescGZIP(), []int{0}
+}
+
 type HashReq struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
@@ -35,7 +73,7 @@ type HashReq struct {
 func (x *HashReq) Reset() {
 	*x = HashReq{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_api_tool_proto_msgTypes[0]
+		mi := &file_api_tool_proto_msgTypes[1]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -48,7 +86,7 @@ func (x *HashReq) String() string {
 func (*HashReq) ProtoMessage() {}
 
 func (x *HashReq) ProtoReflect() protoreflect.Message {
-	mi := &file_api_tool_proto_msgTypes[0]
+	mi := &file_api_tool_proto_msgTypes[1]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -61,7 +99,7 @@ func (x *HashReq) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use HashReq.ProtoReflect.Descriptor instead.
 func (*HashReq) Descriptor() ([]byte, []int) {
-	return file_api_tool_proto_rawDescGZIP(), []int{0}
+	return file_api_tool_proto_rawDescGZIP(), []int{1}
 }
 
 func (x *HashReq) GetHash() string {
@@ -97,7 +135,7 @@ type HashRes struct {
 func (x *HashRes) Reset() {
 	*x = HashRes{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_api_tool_proto_msgTypes[1]
+		mi := &file_api_tool_proto_msgTypes[2]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -110,7 +148,7 @@ func (x *HashRes) String() string {
 func (*HashRes) ProtoMessage() {}
 
 func (x *HashRes) ProtoReflect() protoreflect.Message {
-	mi := &file_api_tool_proto_msgTypes[1]
+	mi := &file_api_tool_proto_msgTypes[2]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -123,7 +161,7 @@ func (x *HashRes) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use HashRes.ProtoReflect.Descriptor instead.
 func (*HashRes) Descriptor() ([]byte, []int) {
-	return file_api_tool_proto_rawDescGZIP(), []int{1}
+	return file_api_tool_proto_rawDescGZIP(), []int{2}
 }
 
 func (x *HashRes) GetNum() string {
@@ -148,22 +186,26 @@ var file_api_tool_proto_rawDesc = []byte{
 	0x69, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72,
 	0x6f, 0x74, 0x6f, 0x1a, 0x1b, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74,
 	0x6f, 0x62, 0x75, 0x66, 0x2f, 0x65, 0x6d, 0x70, 0x74, 0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
-	0x22, 0x49, 0x0a, 0x07, 0x48, 0x61, 0x73, 0x68, 0x52, 0x65, 0x71, 0x12, 0x12, 0x0a, 0x04, 0x68,
-	0x61, 0x73, 0x68, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x68, 0x61, 0x73, 0x68, 0x12,
-	0x12, 0x0a, 0x04, 0x74, 0x65, 0x78, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x74,
-	0x65, 0x78, 0x74, 0x12, 0x16, 0x0a, 0x06, 0x62, 0x61, 0x73, 0x65, 0x36, 0x34, 0x18, 0x03, 0x20,
-	0x01, 0x28, 0x09, 0x52, 0x06, 0x62, 0x61, 0x73, 0x65, 0x36, 0x34, 0x22, 0x2d, 0x0a, 0x07, 0x48,
-	0x61, 0x73, 0x68, 0x52, 0x65, 0x73, 0x12, 0x10, 0x0a, 0x03, 0x6e, 0x75, 0x6d, 0x18, 0x01, 0x20,
-	0x01, 0x28, 0x09, 0x52, 0x03, 0x6e, 0x75, 0x6d, 0x12, 0x10, 0x0a, 0x03, 0x68, 0x65, 0x78, 0x18,
-	0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x68, 0x65, 0x78, 0x32, 0x4b, 0x0a, 0x0b, 0x54, 0x6f,
-	0x6f, 0x6c, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x3c, 0x0a, 0x04, 0x48, 0x61, 0x73,
-	0x68, 0x12, 0x0c, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x48, 0x61, 0x73, 0x68, 0x52, 0x65, 0x71, 0x1a,
-	0x0c, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x48, 0x61, 0x73, 0x68, 0x52, 0x65, 0x73, 0x22, 0x18, 0x82,
-	0xd3, 0xe4, 0x93, 0x02, 0x12, 0x22, 0x0d, 0x2f, 0x76, 0x31, 0x2f, 0x74, 0x6f, 0x6f, 0x6c, 0x2f,
-	0x68, 0x61, 0x73, 0x68, 0x3a, 0x01, 0x2a, 0x42, 0x2e, 0x5a, 0x2c, 0x67, 0x69, 0x74, 0x68, 0x75,
-	0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x68, 0x61, 0x74, 0x6c, 0x6f, 0x6e, 0x65, 0x6c, 0x79, 0x2f,
-	0x72, 0x70, 0x63, 0x2d, 0x74, 0x6f, 0x6f, 0x6c, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x67, 0x65, 0x6e,
-	0x2f, 0x67, 0x6f, 0x2f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x22, 0x07, 0x0a, 0x05, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x49, 0x0a, 0x07, 0x48, 0x61, 0x73,
+	0x68, 0x52, 0x65, 0x71, 0x12, 0x12, 0x0a, 0x04, 0x68, 0x61, 0x73, 0x68, 0x18, 0x01, 0x20, 0x01,
+	0x28, 0x09, 0x52, 0x04, 0x68, 0x61, 0x73, 0x68, 0x12, 0x12, 0x0a, 0x04, 0x74, 0x65, 0x78, 0x74,
+	0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x74, 0x65, 0x78, 0x74, 0x12, 0x16, 0x0a, 0x06,
+	0x62, 0x61, 0x73, 0x65, 0x36, 0x34, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x06, 0x62, 0x61,
+	0x73, 0x65, 0x36, 0x34, 0x22, 0x2d, 0x0a, 0x07, 0x48, 0x61, 0x73, 0x68, 0x52, 0x65, 0x73, 0x12,
+	0x10, 0x0a, 0x03, 0x6e, 0x75, 0x6d, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x6e, 0x75,
+	0x6d, 0x12, 0x10, 0x0a, 0x03, 0x68, 0x65, 0x78, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03,
+	0x68, 0x65, 0x78, 0x32, 0x7a, 0x0a, 0x0b, 0x54, 0x6f, 0x6f, 0x6c, 0x53, 0x65, 0x72, 0x76, 0x69,
+	0x63, 0x65, 0x12, 0x3c, 0x0a, 0x04, 0x48, 0x61, 0x73, 0x68, 0x12, 0x0c, 0x2e, 0x61, 0x70, 0x69,
+	0x2e, 0x48, 0x61, 0x73, 0x68, 0x52, 0x65, 0x71, 0x1a, 0x0c, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x48,
+	0x61, 0x73, 0x68, 0x52, 0x65, 0x73, 0x22, 0x18, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x12, 0x22, 0x0d,
+	0x2f, 0x76, 0x31, 0x2f, 0x74, 0x6f, 0x6f, 0x6c, 0x2f, 0x68, 0x61, 0x73, 0x68, 0x3a, 0x01, 0x2a,
+	0x12, 0x2d, 0x0a, 0x04, 0x50, 0x69, 0x6e, 0x67, 0x12, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x45,
+	0x6d, 0x70, 0x74, 0x79, 0x1a, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79,
+	0x22, 0x0d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x07, 0x12, 0x05, 0x2f, 0x70, 0x69, 0x6e, 0x67, 0x42,
+	0x2e, 0x5a, 0x2c, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x68, 0x61,
+	0x74, 0x6c, 0x6f, 0x6e, 0x65, 0x6c, 0x79, 0x2f, 0x72, 0x70, 0x63, 0x2d, 0x74, 0x6f, 0x6f, 0x6c,
+	0x2f, 0x61, 0x70, 0x69, 0x2f, 0x67, 0x65, 0x6e, 0x2f, 0x67, 0x6f, 0x2f, 0x61, 0x70, 0x69, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -178,16 +220,19 @@ func file_api_tool_proto_rawDescGZIP() []byte {
 	return file_api_tool_proto_rawDescData
 }
 
-var file_api_tool_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_tool_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
 var file_api_tool_proto_goTypes = []interface{}{
-	(*HashReq)(nil), // 0: api.HashReq
-	(*HashRes)(nil), // 1: api.HashRes
+	(*Empty)(nil),   // 0: api.Empty
+	(*HashReq)(nil), // 1: api.HashReq
+	(*HashRes)(nil), // 2: api.HashRes
 }
 var file_api_tool_proto_depIdxs = []int32{
-	0, // 0: api.ToolService.Hash:input_type -> api.HashReq
-	1, // 1: api.ToolService.Hash:output_type -> api.HashRes
-	1, // [1:2] is the sub-list for method output_type
-	0, // [0:1] is the sub-list for method input_type
+	1, // 0: api.ToolService.Hash:input_type -> api.HashReq
+	0, // 1: api.ToolService.Ping:input_type -> api.Empty
+	2, // 2: api.ToolService.Hash:output_type -> api.HashRes
+	0, // 3: api.ToolService.Ping:output_type -> api.Empty
+	2, // [2:4] is the sub-list for method output_type
+	0, // [0:2] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -200,7 +245,7 @@ func file_api_tool_proto_init() {
 	}
 	if !protoimpl.UnsafeEnabled {
 		file_api_tool_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*HashReq); i {
+			switch v := v.(*Empty); i {
 			case 0:
 				return &v.state
 			case 1:
@@ -212,6 +257,18 @@ func file_api_tool_proto_init() {
 			}
 		}
 		file_api_tool_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*HashReq); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_api_tool_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
 			switch v := v.(*HashRes); i {
 			case 0:
 				return &v.state
@@ -230,7 +287,7 @@ func file_api_tool_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_api_tool_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   2,
+			NumMessages:   3,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
