# api/gen/go/api/tool_grpc.pb.go
@@ -23,6 +23,7 @@ const _ = grpc.SupportPackageIsVersion7
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type ToolServiceClient interface {
 	Hash(ctx context.Context, in *HashReq, opts ...grpc.CallOption) (*HashRes, error)
+	Ping(ctx context.Context, in *Empty, opts ...grpc.CallOption) (*Empty, error)
 }
 
 type toolServiceClient struct {
@@ -42,11 +43,21 @@ func (c *toolServiceClient) Hash(ctx context.Context, in *HashReq, opts ...grpc.
 	return out, nil
 }
 
+func (c *toolServiceClient) Ping(ctx context.Context, in *Empty, opts ...grpc.CallOption) (*Empty, error) {
+	out := new(Empty)
+	err := c.cc.Invoke(ctx, "/api.ToolService/Ping", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // ToolServiceServer is the server API for ToolService service.
 // All implementations must embed UnimplementedToolServiceServer
 // for forward compatibility
 type ToolServiceServer interface {
 	Hash(context.Context, *HashReq) (*HashRes, error)
+	Ping(context.Context, *Empty) (*Empty, error)
 	mustEmbedUnimplementedToolServiceServer()
 }
 
@@ -56,6 +67,9 @@ type UnimplementedToolServiceServer struct {
 
 func (UnimplementedToolServiceServer) Hash(context.Context, *HashReq) (*HashRes, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Hash not implemented")
+}
+func (UnimplementedToolServiceServer) Ping(context.Context, *Empty) (*Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Ping not implemented")
 }
 func (UnimplementedToolServiceServer) mustEmbedUnimplementedToolServiceServer() {}
 
@@ -88,6 +102,24 @@ func _ToolService_Hash_Handler(srv interface{}, ctx context.Context, dec func(in
 	return interceptor(ctx, in, info, handler)
 }
 
+func _ToolService_Ping_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(Empty)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ToolServiceServer).Ping(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/api.ToolService/Ping",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ToolServiceServer).Ping(ctx, req.(*Empty))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // ToolService_ServiceDesc is the grpc.ServiceDesc for ToolService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -98,6 +130,10 @@ var ToolService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Hash",
 			Handler:    _ToolService_Hash_Handler,
+		},
+		{
+			MethodName: "Ping",
+			Handler:    _ToolService_Ping_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
